[workspace]
[package]
name = "hello_svelte"
version = "0.1.0"
authors = ["Jakob Meier <inbox@jakobmeier.ch>", "David Horner"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
div = { path = "../../" }
gloo-timers = "0.3.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlCollection",
    "Window",
    "HtmlScriptElement",
    "HtmlHeadElement",
]
