[workspace]
[package]
name = "reposition"
version = "0.1.0"
authors = ["Jakob Meier <inbox@jakobmeier.ch>", "David Horner"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
console_error_panic_hook = "0.1.7"
div = { path = "../../" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlCollection",
    "Window",
    "HtmlScriptElement",
    "HtmlHeadElement",
    "Event",
    "KeyboardEvent",
]
